fix: :bug: fix start section overflow

--- a/page.css
+++ b/page.css
@@ -21,6 +21,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    overflow: hidden;
     gap: 4rem;
 }
 #start .left {
